# JyRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: ExternalLibraries.cmake  ExternalProjects.cmake  OpenGLES.cmake  glad.cmake
Engine/: CMakeLists.txt  Engine.cpp  Engine.h
Engine/Application/: Application.cpp  Application.h  CMakeLists.txt  Window.cpp  Window.h
Engine/Application/Win32/: Window.cpp  WindowWin32.cpp
Engine/Common/: CMakeLists.txt  Common.cpp  Ref.h  Time.h  TimeUtils.h  Vector.h
Engine/Device/: CMakeLists.txt  Device.cpp  Device.h  DeviceBuffer.cpp  DeviceBuffer.h  DeviceShader.cpp  DeviceShader.h
Engine/Device/GLES/: GLESDevice.cpp  GLESDevice.h  GLESDeviceBuffer.cpp  GLESDeviceBuffer.h  GLESDeviceShader.cpp  GLESDeviceShader.h
Engine/Log/: CMakeLists.txt  Log.cpp  Log.h
Engine/Math/: CMakeLists.txt  Color.h  Vectors.h
Game/: CMakeLists.txt  main.cpp
